# My_Projects

./: LICENSE  README.md  main.py  pyproject.toml
AI_Strategy/: README.md  ai_action.json  draft.cpp  game_config.json  game_state.json  main.py  openai_parsing.py  pyproject.toml  strategy.cpp
AI_Strategy/Cpp-Scripts/: AI.cpp  AI.h  Config.h  Player.cpp  Player.h  Unit.cpp  Unit.h  Utils.cpp  Utils.h
AI_Strategy/Py_Scripts/: data_processing.py
AI_Strategy/ai_prompts/: ai_prompts.py  ai_response_formats.py
AI_Strategy/game_dashboard/: requirements.txt  rxconfig.py
AI_Strategy/game_dashboard/game_dashboard/: game_dashboard.py  state.py
AI_Strategy/server/: database.py  models.py  schemas.py
House_Price_Predictor/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
House_Price_Predictor/app/: database.py  ml_logic.py  models.py  schemas.py
House_Price_Predictor/data/models/: scaler.joblib  (+2 more)
House_Price_Predictor/machine_learning/: scikit.py  train.py
Learnspot/: .gitignore  README.md  learnspot.html  main.py  pyproject.toml  requirements.txt
Learnspot/agents_classes/: agent_classes.py  agents_descriptions.py
Learnspot/databases/: database.py
Learnspot/dependencies/: dependency.py
Learnspot/fastapi_routing/: chat_router_calls.py  practice_router_calls.py  reader_router_calls.py  translation_router_calls.py  users_router_calls.py
Learnspot/output_models/: translation_output.py
Learnspot/requests_to_openai/: request_to_openai.py
Learnspot/requests_to_reverso/: requests_to_reverso.py
Learnspot/schemas/: schemas.py
(+70 files in other folders)
